Calm Business: Fix the cover h2 alignment

--- a/calm-business/sass/blocks/_blocks.scss
+++ b/calm-business/sass/blocks/_blocks.scss
@@ -573,6 +573,24 @@
 			text-align: inherit;
 		}
 
+		h2 {
+			padding: 0;
+			max-width: inherit; // undo opinionated styles
+			text-align: inherit;
+
+			&.has-text-align-left {
+				text-align: left;
+			}
+
+			&.has-text-align-center {
+				text-align: center;
+			}
+
+			&.has-text-align-right {
+				text-align: right;
+			}
+		}
+
 		h3 {
 			font-size: $font__size-md;
 		}
